@@ -220,6 +220,8 @@ documents those changes that are of interest to users and administrators.
  -- Fix race with task/cgroup memory and jobacctgather/cgroup, the first was
     removing the pid from the task_X cgroup directory.
  -- openapi/dbv0.0.38 - set default account org and desc to be account name.
+ -- openapi/dbv0.0.38 - Allow strings for JobId instead of only numerical JobId
+    for GET job methods.
 
 * Changes in Slurm 21.08.9
 ==========================
